[package]
name = "simple-https-tunnel"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
clap = { version="4.5.23", features = ["derive"]}
derive_builder = "0.20.2"
humantime-serde = "1.1.1"
log = "0.4.22"
regex = "1.11.1"
serde = { version = "1.0.215", features=["derive"] }
serde_regex = "1.1.0"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tls = "0.3.1"
tokio-utils = "0.1.2"
